2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_buffer_class_init),
	(gst_v4lsrc_buffer_finalize):
	Correctly chain up the finalize method.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgiostreamsink.c:
	* ext/gio/gstgiostreamsrc.c:
	Add documentation and example code for giostreamsink/giostreamsrc.

	* tests/check/pipelines/gio.c: (GST_START_TEST):
	Ask the GMemoryOutputStream for the data instead of assuming that
	the pointer to the data stayed the same. It could've been realloc'ed.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgiosink.c:
	* ext/gio/gstgiosrc.c:
	Make the documentation of giosink/giosrc complete, large parts
	are based on the gnomevfssink/gnomevfssrc docs.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* docs/plugins/gst-plugins-base-plugins.args:
	* docs/plugins/gst-plugins-base-plugins.hierarchy:
	* docs/plugins/gst-plugins-base-plugins.interfaces:
	* docs/plugins/gst-plugins-base-plugins.prerequisites:
	* docs/plugins/gst-plugins-base-plugins.signals:
	* docs/plugins/inspect/plugin-adder.xml:
	* docs/plugins/inspect/plugin-audioconvert.xml:
	* docs/plugins/inspect/plugin-audiorate.xml:
	* docs/plugins/inspect/plugin-audioresample.xml:
	* docs/plugins/inspect/plugin-decodebin.xml:
	* docs/plugins/inspect/plugin-ffmpegcolorspace.xml:
	* docs/plugins/inspect/plugin-gdp.xml:
	* docs/plugins/inspect/plugin-gio.xml:
	* docs/plugins/inspect/plugin-gnomevfs.xml:
	* docs/plugins/inspect/plugin-libvisual.xml:
	* docs/plugins/inspect/plugin-ogg.xml:
	* docs/plugins/inspect/plugin-pango.xml:
	* docs/plugins/inspect/plugin-playback.xml:
	* docs/plugins/inspect/plugin-queue2.xml:
	* docs/plugins/inspect/plugin-subparse.xml:
	* docs/plugins/inspect/plugin-theora.xml:
	* docs/plugins/inspect/plugin-uridecodebin.xml: